# ecoweb

./: Dockerfile  db.sqlite3  docker-compose.yml  ecoweb.pem  entrypoint.sh  pyproject.toml  requirements.txt
admin_panel/: requirements.txt
admin_panel/api/: admin.py  models.py  serializers.py  urls.py  views.py
admin_panel/api/migrations/: 0001_initial.py
admin_panel/config/: fake_data.py  settings.py  urls.py  views.py
admin_panel/templates/: base.html
admin_panel/users/: admin.py  models.py  utils.py
common_api_server/: .env  .gitignore  db.sqlite3
common_api_server/api/: urls.py
common_api_server/authentication/: apps.py  models.py  views.py
common_api_server/config/: settings.py  urls.py  utils.py  views.py
common_api_server/estimates/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
common_api_server/services/: admin.py  models.py  urls.py  views.py
demand_server/api/: urls.py  views.py
demand_server/config/: settings.py  urls.py  views.py
demand_server/templates/: base.html  landing.html  main.html
demand_server/users/: managers.py  models.py  serializers.py  urls.py  views.py
payment_api_server/config/: settings.py  urls.py  views.py
payment_api_server/payment/: admin.py  models.py  pg_service.py  serializers.py  urls.py  views.py
provider_server/api/: admin.py  models.py  urls.py
provider_server/config/: serializers.py  settings.py  urls.py  utils.py  views.py
provider_server/templates/: base.html  main.html
provider_server/users/: admin.py  managers.py  models.py  views.py
(+123 files in other folders)
