[tool.poetry]
name = "ecoweb"
version = "0.1.0"
description = ""
authors = ["grace287 <chenlucia287@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-decouple = "^3.8"
django-allauth = "^65.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
