[tool.poetry]
name = "ecoweb"
version = "0.1.0"
description = ""
authors = ["grace287 <chenlucia287@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-decouple = "^3.8"
django-allauth = "^65.4.1"
requests = "^2.32.3"
jwt = "^1.3.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.8"
django-filter = "^25.1"
humanize = "^4.12.1"
faker = "^36.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
